# BorealisEngine

./: .gitignore  .gitmodules  BorealisEngine.drawio  CMakeLists.txt  CMakePresets.json  README.md  action.yml
.github/workflows/: cmake-linux-debug.yml  cmake-linux-min-size-rel.yml  cmake-linux-rel-with-deb-info.yml  cmake-linux-rel-witth-deb-info.yml  cmake-linux-release.yml  cmake-win-debug.yml  cmake-win-min-size-rel.yml  cmake-win-rel-with-deb-info.yml  cmake-win-release.yml
resources/compute-shader/: CollisionDetectionResolve.cso  CollisionDetectionResolve.hlsl
resources/models/: Stanford_Dragon.fbx  cube.fbx  sphere.fbx
resources/shader/: DefaultPixelShader.cso  DefaultPixelShader.hlsl  DefaultVertexShader.cso  DefaultVertexShader.hlsl
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  borealis_engine.h  config.h  main.cpp
src/core/debug/: logger.cpp  logger.h  logger_internal.cpp  logger_internal.h  profiling.h
src/core/debug/runtime-debug/: EditorWindow.cpp  EditorWindow.h  IGUIDrawable.cpp  IGUIDrawable.h  IGUI_drawable.cpp  IGUI_drawable.h  debug-category-button.cpp  debug-category-button.h  debug_category_button.cpp  debug_category_button.h  debug_info_label.h  editor_window.cpp  editor_window.h  info_labels.h  input_debugger.h  memory_debugger.h  runtime-debug-window.cpp  runtime-debug-window.h  runtime-debug.cpp  runtime-debug.h  runtime_debug.cpp  runtime_debug.h
src/core/debug/runtime-debug/imgui/: imgui.h  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_widgets.cpp  imstb_truetype.h
src/core/graphics/: graphics.h  pipeline_config.h
src/core/graphics/d3d11/: borealis_d3d11.cpp  borealis_d3d11.h  d3d11.cpp  d3d11.h  d3d11_common.h
src/core/graphics/d3d12/: borealis_d3d12.cpp  borealis_d3d12.h  d3d12.cpp  d3d12.h  d3d12_common.h
src/core/graphics/helpers/: d3d12_helpers.h  gbuffer.h  helpers.cpp  helpers.h  texture.cpp  texture.h
src/core/graphics/vulkan/: borealis_vulkan.cpp  borealis_vulkan.h  vulkan.cpp  vulkan.h
src/core/helpers/: events.h  macros.h  object_pool.h
src/core/input/: borealis_devices.h  input.cpp  input.h  input_device.h  keyboard.cpp  keyboard.h  win_input.cpp  win_input.h
src/core/io/: file_io.cpp  file_io.h
src/core/math/: crc_hash.cpp  crc_hash.h  math.cpp  math.h  random.cpp  random.h
src/core/memory/: allocator.cpp  allocator.h  heap_allocator.cpp  heap_allocator.h  memory.cpp  memory.h  pool_allocator.cpp  pool_allocator.h  ref_cnt_auto_ptr.cpp  ref_cnt_auto_ptr.h  stack_allocator.cpp  stack_allocator.h
src/core/types/: string_id.cpp  string_id.h  types.h
src/core/window/: window.cpp  window.h  window_internal.cpp  window_internal.h
src/helpers/: helpers.h
tests/: CMakeLists.txt  test_allocator.cpp  test_debug.cpp  test_graphics.cpp  test_helpers.cpp  test_math.cpp  test_ref_cnt_auto_ptr.cpp  test_string.cpp  test_types.cpp  test_window.cpp
